# Polifeditor

./: CMakeLists.txt  README.md
src/: AbstractCommand.cpp  App.cpp  AppContext.cpp  CommandLibrary.cpp  CommandState.cpp  Console.cpp  EditTextState.cpp  Editor.cpp  FileBrowser.cpp  HelloCommand.cpp  Keyboard.cpp  PwdCommand.cpp  SaveState.cpp  ScrollingWindow.cpp  TextFile.cpp  main.cpp
src/includes/: AbstractCommand.hpp  App.hpp  AppContext.hpp  AppState.hpp  CommandLibrary.hpp  CommandState.hpp  Console.hpp  EditTextState.hpp  Editor.hpp  FileBrowser.hpp  HelloCommand.hpp  IState.hpp  Keyboard.hpp  Math.hpp  PwdCommand.hpp  SaveState.hpp  ScrollingWindow.hpp  TextFile.hpp  filesystem.hpp
